src/objects/ffct__MigrationSetJob__c.object
<CustomObject>
    <customHelpPage>ffct__migrationsetonlinehelp</customHelpPage>
    <description>Job to track the progress of operations performed on a Migration Set</description>
    <fields>
        <fullName>ffct__ApexJobId__c</fullName>
        <label>ApexJob Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ffct__BatchProcessStatus__c</fullName>
        <formula>TEXT(ffct__BatchProcess__r.ffct__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Batch Process Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffct__BatchProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch Process</label>
        <referenceTo>ffct__fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>Migration Set Jobs</relationshipLabel>
        <relationshipName>MigrationSetJobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffct__MigrationSet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Holds the associated Migration Set</description>
        <label>Migration Set</label>
        <referenceTo>ffct__MigrationSet__c</referenceTo>
        <relationshipLabel>Migration Set Jobs</relationshipLabel>
        <relationshipName>MigrationSetJobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffct__OperationType__c</fullName>
        <description>Holds the type of operation being performed on Migration Set. Eg - Migration Data Preparation</description>
        <label>Operation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MigrationDataPreparation</fullName>
                </value>
                <value>
                    <fullName>MigrationDataBundling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffct__ProcessStatus__c</fullName>
        <label>Process Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Migration Set Job</label>
    <nameField>
        <displayFormat>MSJ-{0000}</displayFormat>
        <label>Migration Set Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Migration Set Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>